[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[tool.versioningit.vcs]
method = "git-archive"
default-tag = "0.0.0"
describe-subst = "$Format:%(describe:tags)$"

[tool.coverage.run]
branch = false
omit = [
  ".venv*",
  "setup.py",
  "test/*",
]
source = ["kotori"]

[tool.coverage.report]
fail_under = 0
show_missing = true
omit = [
  "kotori/daq/intercom/c.py",
  "kotori/daq/intercom/pyclibrary_ext/*",
  "kotori/daq/intercom/udp.py",
  "kotori/daq/intercom/wamp.py",
  "kotori/firmware/*",
  "kotori/frontend/*",
  "kotori/vendor/hydro2motion/*",
  "kotori/vendor/ilaundry/*",
  "kotori/vendor/luftdaten/*",
  "kotori/vendor/lst/*",
]
